[project]
name = "tensor_art"
description = "This project implements a set of custom nodes for ComfyUI, integrating some of the API interfaces provided by [a/TAMS](https://tams.tensor.art/)."
version = "1.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Tensor-Art/ComfyUI_TENSOR_ART"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_TENSOR_ART"
Icon = "https://image.tensorartassets.com/cdn-cgi/image/anim=true,plain=false,f=avif,q=85/frontend/1720777845454.svg"
